syntax = "proto3";

package msharbaji.protobuf.example;

option go_package = "github.com/msharbaji/grpc-go-example/pb";


message VersionRequest {
    string version = 1;
}
message VersionResponse {
    string version = 1;
}


service VersionService {
  rpc GetVersion(VersionRequest) returns (VersionResponse);
}